# ghostwriter

./: --help  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .release-it.json  .travis.yml  BUILD_MAC.md  CHANGELOG  CHANGELOG.md  CHANGELOG.md.backup  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  CREDITS.md  C_Make_WIP.txt  Makefile  Messages.sh  README.md  appveyor.yml  backup.html  contribute.html  documentation.html  donate.html  download.html  fedora-staging.spec  fedora.spec  ghostwriter.pro  ghostwriter.spec  icons.qrc  index.html  nav-partial.html  object_script.ghostwriter.Debug  object_script.ghostwriter.Release  org.kde.konsole.desktop  params.json  quickreferenceguide_en.md  quickrefguide.html  releaseNotes.py  (+6 more)
.github/ISSUE_TEMPLATE/: bug-or-troubleshooting-report.md  bug-report-or-troubleshooting-request.md
.github/workflows/: codeql-analysis.yml  copr.yml  deployment-macos.yml  launchpad.yml  mac-osx-deploy.yml  macos-build-qt6.yml  macos-build.yml  main.yml  unit-tests.yml
.qtc_clangd/: compile_commands.json
.reuse/: dep5
LICENSES/: MIT.txt
autotest/: CMakeLists.txt  README.md
autotest/asynctextwriter/: CMakeLists.txt  asynctextwritertest.cpp
autotest/bookmark/: CMakeLists.txt  bookmarktest.cpp
css/: custom.css  sublime.css
debian/: changelog  control  copyright  dirs  menu  rules  watch
debian/source/: lintian-overrides
doc/: BUILD_MAC.md  CMakeLists.txt  man-ghostwriter.1.docbook
ghostwriter/: ghostwriter.pro
ghostwriter/resources/: quickreferenceguide_ja.md  quickreferenceguide_ru.md
ghostwriter/src/: AbstractStatisticsWidget.h  AppSettings.cpp  AppSettings.h  ColorHelper.cpp  ColorHelper.h  (+49 more)
hoedown/: hoedown.pri  hoedown.pro
js/: footer.js  navbar.js
resources/: COPYING  ghostwriter.1  ghostwriter.appdata.xml  ghostwriter.desktop  ghostwriter.rc  github-dark.css  github.css  gw.js  preview.css  preview.html  quickreferenceguide.html  quickreferenceguide.md  quickreferenceguide_ar.html  quickreferenceguide_ar.md  quickreferenceguide_en.html  quickreferenceguide_en.md  quickreferenceguide_ja.html  quickreferenceguide_ja.md  quickreferenceguide_ru.html  quickreferenceguide_ru.md  widgets.qss
src/: AbstractStatisticsWidget.cpp  AbstractStatisticsWidget.h  AppMain.cpp  AppSettings.cpp  AppSettings.h  CMakeLists.txt  CmarkGfmAPI.cpp  CmarkGfmAPI.h  CmarkGfmExporter.cpp  CmarkGfmExporter.h  ColorHelper.cpp  ColorHelper.h  CommandLineExporter.cpp  CommandLineExporter.h  DocumentHistory.h  DocumentManager.cpp  DocumentManager.h  DocumentStatistics.cpp  DocumentStatistics.h  DocumentStatisticsDisplay.cpp  DocumentStatisticsDisplay.h  DocumentStatisticsWidget.cpp  DocumentStatisticsWidget.h  EffectsMenuBar.cpp  EffectsMenuBar.h  ExportDialog.cpp  ExportDialog.h  ExportFormat.cpp  ExportFormat.h  Exporter.cpp  Exporter.h  ExporterFactory.cpp  ExporterFactory.h  GraphicsFadeEffect.h  HighlightTokenizer.cpp  HighlightTokenizer.h  HtmlPreview.cpp  HtmlPreview.h  HudWindow.cpp  HudWindow.h  (+182 more)
src/editor/: asynctextwriter.cpp  asynctextwriter.h  colorscheme.h  markdowndocument.cpp  markdowndocument.h  markdowneditor.cpp  markdowneditor.h  markdowneditortypes.h  markdownhighlighter.cpp  markdownhighlighter.h  markdownstates.h  textblockdata.h
src/editor/actions/: edit.h  inlinemarkuptoggle.cpp  inlinemarkuptoggle.h
src/export/: cmarkgfmexporter.cpp  cmarkgfmexporter.h  commandlineexporter.h  exportdialog.cpp  exportdialog.h  exporter.cpp  exporter.h  exporterfactory.cpp  exporterfactory.h  exportformat.cpp  exportformat.h
src/markdown/: cmarkgfmapi.cpp  cmarkgfmapi.h  markdownast.cpp  markdownast.h  markdownnode.cpp  markdownnode.h  memoryarena.cpp  memoryarena.h
src/preview/: htmlpreview.cpp  htmlpreview.h  previewproxy.cpp  previewproxy.h  sandboxedwebpage.cpp  sandboxedwebpage.h
src/settings/: appsettings.cpp  appsettings.h  localedialog.cpp  localedialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  preferencesdialog_ui.py  previewoptionsdialog.cpp  previewoptionsdialog.h  simplefontdialog.cpp  simplefontdialog.h
src/spelling/: abstract_dictionary.h  abstract_dictionary_provider.h  dictionary.h  dictionary_dialog.cpp  dictionary_dialog.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_provider_hunspell.cpp  dictionary_provider_hunspell.h  dictionary_provider_nsspellchecker.h  dictionary_provider_nsspellchecker.mm  dictionary_provider_voikko.cpp  dictionary_provider_voikko.h  dictionary_ref.h  dictionarymanager.cpp  dictionarymanager.h  dictionaryprovider.h  hunspellprovider.cpp  hunspellprovider.h  nsspellcheckerprovider.h  nsspellcheckerprovider.mm  spell_checker.cpp  spell_checker.h  spellcheckdecorator.cpp  spellcheckdecorator.h  spellcheckdialog.cpp  spellcheckdialog.h  spellchecker.cpp  spellchecker.h
src/spelling/hunspell/: config.h
src/statistics/: abstractstatisticswidget.cpp  abstractstatisticswidget.h  documentstatistics.cpp  documentstatistics.h  documentstatisticswidget.cpp  documentstatisticswidget.h  sessionstatistics.cpp  sessionstatistics.h  sessionstatisticswidget.cpp  sessionstatisticswidget.h  statisticsindicator.cpp  statisticsindicator.h
src/sundown/: README
src/theme/: chromecolors.cpp  chromecolors.h  colorschemepreviewer.cpp  colorschemepreviewer.h  stylesheetbuilder.cpp  stylesheetbuilder.h  svgicontheme.cpp  svgicontheme.h  theme.cpp  theme.h  themeeditordialog.cpp  themeeditordialog.h  themerepository.cpp  themerepository.h  themeselectiondialog.cpp  themeselectiondialog.h
sundown/: COPYING  sundown.pri  sundown.pro
test/: CMakeLists.txt  asynctextwritertest.cpp  test  test.pro
translations/: CMakeLists.txt  ghostwriter_ar.ts  ghostwriter_ca.ts  ghostwriter_cs.ts  ghostwriter_de.ts  ghostwriter_en.qm  ghostwriter_en.ts  ghostwriter_es.ts  ghostwriter_fr.ts  ghostwriter_it-IT.qm  ghostwriter_it-IT.ts  ghostwriter_it.ts  ghostwriter_ja.ts  ghostwriter_nb_NO.ts  ghostwriter_nl.ts  ghostwriter_pl.ts  ghostwriter_pt-BR.ts  ghostwriter_pt_BR.ts  ghostwriter_ru.ts  ghostwriter_sv.ts  ghostwriter_zh.qm  ghostwriter_zh.ts
(+1669 files in other folders)
